<resources>
    <string name="app_name">DolphinmPos</string>
    <string name="content_description">will be provided</string>
    <string name="kist_pay_label">Kist</string>
    <string name="get_location">Get Location</string>
    <string name="pay">Pay</string>
    <string name="select_brands">Select Brand</string>
    <string name="apple">Apple</string>
    <string name="copy_rights">Copy Rights Eocean Private Limited</string>
    <string name="phone_number">3242426724</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="report_btn">Report</string>
    <string name="phone_number_with_92">+92 3242426724</string>
    <string name="transaction_history">Transaction History</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="_92">+92</string>
    <string name="message">Message</string>
    <string name="in_entry">IN ENTRY</string>
    <string name="send_invoice_via_whats_app">SEND INVOICE VIA WHATS APP</string>
    <string name="out_entry">OUT ENTRY</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_detail">Enter Detail (Optional)</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="allow">Allow</string>
    <string name="upload_image">Upload Image</string>
    <string name="deny">Deny</string>
    <string name="save">SAVE</string>
    <string name="buy">BUY</string>
    <string name="cash_register">Cash Register</string>
    <string name="cash_in_hand">Cash In Hand</string>
    <string name="total_balance">Total Balance</string>
    <string name="search_by_amount">Search by amount</string>
    <string name="out">OUT</string>
    <string name="contacts">CONTACTS</string>
    <string name="search_here">Search here</string>
    <string name="in">IN</string>
    <string name="you_dont_have_any_entry">you dont have any entry yet\nstart making entries now.</string>
    <string name="view_and_sale_report">VIEW SALE &amp; EXPENSE REPORT ></string>
    <string name="distributor_name">Distributor Name :</string>
    <string name="shop_details">Shop Details</string>
    <string name="product_name">Product Name</string>
    <string name="credit_type">Credit Type</string>
    <string name="phone_detail">Phone Details</string>
    <string name="search_product_here">Search Product Here</string>
    <string name="view_all">view all</string>
    <string name="look_like_you_dont_have_description">Look like you don\'t have contacts.\nAdd contact to make invoices to track\nyour spendings.</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="home">Home</string>
    <string name="password_label">Password *</string>
    <string name="or">OR</string>
    <string name="payment_type">Payment Type</string>
    <string name="seller_detail">Seller Details</string>
    <string name="select_variant">Select Variant</string>
    <string name="forgot_password">Forgot Pin Code?</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="forgot_pin">FORGOT PIN</string>
    <string name="resent_pin">RESET PIN</string>
    <string name="re_enter_pin">RE-ENTER PIN</string>
    <string name="pakistan_code">+92</string>
    <string name="verification">Verification</string>
    <string name="verification_otp_screen_text">We have sent you an OTP for verification. Please enter the 4 digit code.</string>
    <string name="verify_me">Verify Me</string>
    <string name="request_new_code">Request new code</string>
    <string name="otp_time">01:00</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_name">Enter your name so that we can create your profile for you.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="choose_language">Choose Language</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="welcome_kistpay">Welcome to Kistpay</string>
    <string name="manage_your_whole">Manage your Mobile Retail Store.</string>
    <string name="create_new_pin">CREATE NEW PIN</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="sign_up">SIGN UP</string>
    <string name="add_purchase_detail">Add PURCHASE DETAIL</string>
    <string name="by_continuing">By continuing. I confirm that i have read &amp; agree to the</string>
    <string name="terms_and_policy">Terms &amp; conditions and  Privacy policy</string>
    <string name="button_continue">CONTINUE</string>
    <string name="re_set_pin">RE-SET PIN</string>
    <string name="finish">FINISH</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="add_cash_register">Add Cash Register</string>
    <string name="enter_mobile_screen_text">Enter your mobile number to continue.</string>
    <string name="we_will_send_you">We will send you OTP</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_mobile_screen">Enter your 4 digit password to continue signing in kistpay app.</string>
    <string name="please_enter_your">Please enter your pin to proceed</string>
    <string name="enter_4_digit">Enter 4 digit new password should be numbers only.</string>
    <string name="please_re_enter_the">Please re-enter the 4 digit new password.</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="forget_password">Forget Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="one_time_password">ONE TIME PASSWORD</string>
    <string name="motorola">Motorola</string>
    <string name="enter_the_4_digit_code">Enter the verification 4-digit code sent to you at</string>
    <string name="you_will_get_an_otp">You will get an OTP via SMS on</string>
    <string name="user_number_label">+92 3242426724</string>
    <string name="submit">SUBMIT</string>
    <string name="lets_get_in_touch">Let\'s Get in\nTouch</string>
    <string name="contact_no">Contact No.</string>
    <string name="update">Update</string>
    <string name="comment_box">Comment Box</string>
    <string name="request_a_new_code">Request code in</string>
    <string name="pin_0000">0000</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contact_us_small">Contact Us</string>
    <string name="call_now">Call Now</string>
    <string name="help">Help</string>
    <string name="help_and_support">HELP &amp; SUPPORT</string>
    <string name="you_need_to_receive">you need to receive</string>
    <string name="you_will_give">You will give</string>
    <string name="you_will_get">You will get</string>
    <string name="view_report">VIEW REPORT ></string>
    <string name="no_product_found">No Product Found</string>
    <string name="did_not_receive_code">Didn\'t receive the code?</string>
    <string name="create_profile">Create profile</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="full_name">Full Name *</string>
    <string name="business_name">Business Name *</string>
    <string name="price_of_purchase">Price of purchase</string>
    <string name="price">Price</string>
    <string name="payment">Payment</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="pay_now">Pay Now</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="unit_into">0 x 0</string>
    <string name="sale_price">Sale Price</string>
    <string name="sale">SALE</string>
    <string name="payment_receive">Payment Receive</string>
    <string name="qunatitiy">Quantity</string>
    <string name="distributor">Distributor</string>
    <string name="customer_name">Customer Name</string>
    <string name="name">Name</string>
    <string name="select_contact_number">Add Contact Name/ Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="cheque">Enter Number</string>
    <string name="selling_price">Selling Price</string>
    <string name="buying_price">Buying Price</string>
    <string name="load">Loaned</string>
    <string name="khata_closed">Khaata Closed</string>
    <string name="harris_solange">Harris Solangi</string>
    <string name="date_format">Fri, 13 Nov 2020</string>
    <string name="date">Date</string>
    <string name="edit_entry">EDIT ENTRY</string>
    <string name="no_description_specified">No Description Specified</string>
    <string name="delete">DELETE</string>
    <string name="consolidated">CONSOLIDATED</string>
    <string name="expense_report">EXPENSE REPORT</string>
    <string name="entries">Entries</string>
    <string name="lunch">Lunch</string>
    <string name="email_address">Email Address *</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="address">Address</string>
    <string name="cnic_label">CNIC Number</string>
    <string name="seller_type">Seller Type</string>
    <string name="city">City</string>
    <string name="upload_cnic">Upload CNIC Photo</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="done">DONE</string>
    <string name="imei_detail">IMEI DETAILS</string>
    <string name="profile_setting">PROFILE SETTINGS</string>
    <string name="no_product_fount_for_applied_filter">No Product Found For Applied\nFilter</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="account_created_successfully">Account Created\nSuccessfully</string>
    <string name="explore_the_kistpay">Explore the kistpay App</string>
    <string name="up_front_price">Up Front Price</string>
    <string name="valid_in_warranty">Validity (6 Month,12 Month)</string>
    <string name="cnic_value">42401-1619139-5</string>
    <string name="add_product">Add Product</string>
    <string name="sell">SELL</string>
    <string name="you_got">You got</string>
    <string name="add_member">Add Member</string>
    <string name="you_gave">You gave</string>
    <string name="item_detail">ITEM DETAIL</string>
    <string name="description">Description (Optional)</string>
    <string name="add_custom_product">ADD CUSTOM PRODUCT</string>
    <string name="add">ADD</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="quantity_15_pieces">15 Pieces</string>
    <string name="vendor_stock">VENDOR STOCK</string>
    <string name="vendor_stock_small">Vendor Stock</string>
    <string name="total_stock">Total Stock</string>
    <string name="total_value">Total Value</string>
    <string name="unit_price">Unit Price</string>
    <string name="amount_paid">Paid Amount</string>
    <string name="entry_detail">Entry Detail</string>
    <string name="quantity">Quantity</string>
    <string name="due_amount">Due Amount</string>
    <string name="imei">IMEI Number</string>
    <string name="warranty">Warranty</string>
    <string name="brand_name">Brand Name</string>
    <string name="sell_price">Sell Price</string>
    <string name="regular_price">Regular Price</string>
    <string name="shah_communicator">Shah Communicator</string>
    <string name="buy_date">Buy Date</string>
    <string name="pictures">Pictures</string>
    <string name="customer_detail">CUSTOMER DETAIL</string>
    <string name="aug_02_2020">Aug - 02 - 2020</string>
    <string name="connected">Connected</string>
    <string name="order_confirmation">CONFIRMATION</string>
    <string name="off_line">Offline</string>
    <string name="purchase">PURCHASE</string>
    <string name="inventory">INVENTORY</string>
    <string name="products">Products</string>
    <string name="sell_product">SELL PRODUCT</string>
    <string name="product_variant">Product Variants</string>
</resources>